--- a/FRONTEND/account.html
+++ b/FRONTEND/account.html
@@ -228,12 +228,6 @@
                                                 <input type="text" class="form-control form-control-user" id="exampleYOB"
                                                     placeholder="Ngày sinh">
                                             </div>
-                                            <div class="col-sm-6">
-                                                <input type="text" class="form-control form-control-user" id="exampleAddress"
-                                                    placeholder="Địa chỉ">
-                                            </div>
-                                        </div>
-                                        <div class="form-group row">
                                             <div class="col-sm-6 mb-3 mb-sm-0">
                                                 <select class="form-select form-control-user" aria-label="Default select example">
                                                     <option selected >Trạng thái</option>
@@ -242,9 +236,37 @@
                                                     <option value="F2">F2</option>
                                                   </select>
                                             </div>
+                                        </div>
+                                        <div class="form-group row">
                                             <div class="col-sm-6 mb-3 mb-sm-0">
                                                 <select class="form-select form-control-user" aria-label="Default select example">
                                                     <option selected >Nơi điều trị/cách ly</option>
+                                                    <option value="F0">F0</option>
+                                                    <option value="F1">F1</option>
+                                                    <option value="F2">F2</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                                <select class="form-select form-control-user" aria-label="Default select example">
+                                                    <option selected >Thành phố</option>
+                                                    <option value="F0">F0</option>
+                                                    <option value="F1">F1</option>
+                                                    <option value="F2">F2</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                                <select class="form-select form-control-user" aria-label="Default select example">
+                                                    <option selected >Quận</option>
+                                                    <option value="F0">F0</option>
+                                                    <option value="F1">F1</option>
+                                                    <option value="F2">F2</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-6 mb-3 mb-sm-0">
+                                                <select class="form-select form-control-user" aria-label="Default select example">
+                                                    <option selected >Huyện</option>
                                                     <option value="F0">F0</option>
                                                     <option value="F1">F1</option>
                                                     <option value="F2">F2</option>
