--- a/FRONTEND/manage.html
+++ b/FRONTEND/manage.html
@@ -97,8 +97,7 @@
                             </div>
                         </div>
                     </form>
-                    <!-- Topbar Sort -->
-
+                   
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
 
@@ -217,6 +216,8 @@
                 <!-- Page Heading -->
                 <!-- <h1 class="h3 mb-4 text-gray-800">Blank Page</h1> -->
                 <h1 class="h4 text-gray-900 mb-4 text-center">Danh sách người dùng</h1>
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-down"></i></button>
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-up"></i></button>
                     <div class="overflow-scroll main-content">
                         <div class="card o-hidden border-0 shadow-lg my-5">
                             <div class="card-body p-0">
