--- a/FRONTEND/product.html
+++ b/FRONTEND/product.html
@@ -215,6 +215,10 @@
                 <!-- Page Heading -->
                 <!-- <h1 class="h3 mb-4 text-gray-800">Blank Page</h1> -->
                 <h1 class="h3 mb-4 text-gray-800 text-center"><strong>Chi tiết về gói sản phẩm</strong></h1>
+                <!-- Topbar Sort -->
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-down"></i></button>
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-up"></i></button>
+        
                 <div class="overflow-scroll main-content">
                     <div class="row">
                         <div class="col-md-12 col-lg-4 mb-4 mb-lg-0">
