--- a/FRONTEND/packet.html
+++ b/FRONTEND/packet.html
@@ -214,6 +214,8 @@
                 <!-- Page Heading -->
                 <!-- <h1 class="h3 mb-4 text-gray-800">Blank Page</h1> -->
                 <h1 class="h3 mb-4 text-gray-800 text-center"><strong>Gói sản phẩm hiện có</strong></h1>
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-down"></i></button>
+                <button type="button" class="btn btn-primary"><i class="bi bi-sort-alpha-up"></i></button>
                 <div class="overflow-scroll main-content">
                     <div class="row">
                         <div class="col-md-12 col-lg-4 mb-4 mb-lg-0">
